Added all numpy material

--- a/Spring_2022/numpy/numpy.ipynb
+++ b/Spring_2022/numpy/numpy.ipynb
@@ -487,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 18,
       "id": "ab7a5f57-6496-469b-808a-7c8caf25eb92",
       "metadata": {
         "colab": {
@@ -501,20 +501,19 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "int16\n",
-            "<U8\n"
+            "<U11\n"
           ]
         }
       ],
       "source": [
         "# There are other types\n",
-        "print(\n",
-        "    np.array(sample_data, dtype=\"int16\").dtype\n",
-        ")\n",
+        "# print(\n",
+        "#     np.array(sample_data, dtype=\"int16\").dtype\n",
+        "# )\n",
         "\n",
         "# Array with unicode type\n",
         "print(\n",
-        "    np.array(['string18', 'string2', 'string3',]).dtype\n",
+        "    np.array(['string189er', 'string2', 'string3',]).dtype\n",
         ")"
       ]
     },
