Minor edit to Question

--- a/Spring_2022/charting/Hands_On_Charting.ipynb
+++ b/Spring_2022/charting/Hands_On_Charting.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "source": [
     "# Question 2\n",
-    "> ### Using the following starter code, use numpy and matplotlib to make a scatterplot of 3 different groups comparing age and height. "
+    "> ### Using the following starter code, use matplotlib to make a scatterplot of 3 different groups comparing age and height. "
    ]
   },
   {
