added groupby to pandas workshop

--- a/Spring_2022/pandas/pandas.ipynb
+++ b/Spring_2022/pandas/pandas.ipynb
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
        "3               4  SOCI1000    100"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1451,7 @@
        "three           4  SOCI1000    100"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
        "one            2  CSE3500     48"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1604,7 @@
        "two           3  HIST4000     84"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1675,7 @@
        "three           4  SOCI1000    100"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1687,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1766,7 @@
        "3               4  SOCI1000    100"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1831,7 +1831,7 @@
        "0               1  MCB2400     96"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1843,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1922,7 +1922,7 @@
        "3               4  SOCI1000    100      Other"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1935,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2025,7 +2025,7 @@
        "3               4  SOCI1000    100      Other"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2038,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2111,7 +2111,7 @@
        "3               4  SOCI1000    100"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2124,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2194,7 +2194,7 @@
        "three           4  SOCI1000    100"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2208,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2274,7 +2274,7 @@
        "three           4  SOCI1000    100"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2285,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2364,7 +2364,7 @@
        "3               4  SOCI1000    100        SOC"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2381,7 +2381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2460,7 +2460,7 @@
        "3               4  SOCI1000    100    Sociology"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2492,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2571,7 +2571,7 @@
        "3               4  SOCI1000    100    Sociology"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2583,7 +2583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -2607,7 +2607,7 @@
        "Name: Homework Assignments Per Week, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2615,9 +2615,9 @@
    "source": [
     "# Unique values\n",
     "print(hours_df)\n",
-    "print(hours_df['Homework Assignments Per Week'].unique())\n",
+    "print(hours_df['Homework Assignments Per Week'].unique()) # Remember this is for Series only\n",
     "# Count Values\n",
-    "hours_df['Homework Assignments Per Week'].value_counts()"
+    "hours_df['Homework Assignments Per Week'].value_counts() # Remember this is for Series only"
    ]
   },
   {
@@ -2629,20 +2629,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/venkata/Library/Python/3.7/lib/python/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -2661,6 +2650,17 @@
       "zero            1   MCB2400   96.0\n",
       "two             3  HIST4000   84.0\n",
       "three           4  SOCI1000  100.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/venkata/Library/Python/3.7/lib/python/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
      ]
     },
     {
@@ -2726,7 +2726,7 @@
        "three           4  SOCI1000  100.000000"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2748,7 +2748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2821,7 +2821,7 @@
        "three           4  SOCI1000  100.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2835,7 +2835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2913,7 +2913,7 @@
        "three           4  SOCI1000  100.0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2933,7 +2933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -3020,7 +3020,7 @@
        "3                              0  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3178,6 +3178,316 @@
    ],
    "source": [
     "grades_df.sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Grouping Data \n",
+    "\n",
+    "Probably the most useful method to understand data\n",
+    "\n",
+    "There is a practical example using groupby down below that will help you better understand the power if this function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding another row for demonstration purposes\n",
+    "grades_df.loc[4] = {\"Student ID\": 5, \"Class\": \"CSE3500\", \"Grade\": 20, \"Department\": \"Engineering\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>Class</th>\n",
+       "      <th>Grade</th>\n",
+       "      <th>Department</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>MCB2400</td>\n",
+       "      <td>96</td>\n",
+       "      <td>Biology</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>CSE3500</td>\n",
+       "      <td>48</td>\n",
+       "      <td>Engineering</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>HIST4000</td>\n",
+       "      <td>84</td>\n",
+       "      <td>History</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>SOCI1000</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Sociology</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>CSE3500</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Engineering</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Student ID     Class  Grade   Department\n",
+       "index                                          \n",
+       "0               1   MCB2400     96      Biology\n",
+       "1               2   CSE3500     48  Engineering\n",
+       "2               3  HIST4000     84      History\n",
+       "3               4  SOCI1000    100    Sociology\n",
+       "4               5   CSE3500     20  Engineering"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grades_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.groupby.generic.DataFrameGroupBy'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_group = grades_df.groupby('Class') # Note this does not return a dataframe but a groupby object. You can then do stat functions on this to understand the data\n",
+    "print(type(class_group))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>Grade</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Class</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>CSE3500</th>\n",
+       "      <td>3.5</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HIST4000</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>84.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MCB2400</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>96.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOCI1000</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Student ID  Grade\n",
+       "Class                      \n",
+       "CSE3500          3.5   34.0\n",
+       "HIST4000         3.0   84.0\n",
+       "MCB2400          1.0   96.0\n",
+       "SOCI1000         4.0  100.0"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class_group.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>Grade</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Class</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>CSE3500</th>\n",
+       "      <td>3.5</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HIST4000</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MCB2400</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOCI1000</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Student ID Grade\n",
+       "               mean  mean\n",
+       "Class                    \n",
+       "CSE3500         3.5    34\n",
+       "HIST4000        3.0    84\n",
+       "MCB2400         1.0    96\n",
+       "SOCI1000        4.0   100"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class_group.agg([np.mean])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
